# staticth

./: cabal.config  staticth.cabal
src/main/haskell/: Main.hs  StaticTH.hs
